--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.3
   google_fonts: ^3.0.1
   flutter_dotenv: ^5.0.2
+  noise_meter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
