--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,9 +53,10 @@ android {
         applicationId "com.justin.party_games"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        //minSdkVersion flutter.minSdkVersion
+        minSdkVersion 20
         targetSdkVersion flutter.targetSdkVersion
-        versionCode 2
+        versionCode 3
         versionName "1.0.1"
     }
 
