--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: projet_flutter_mds
-description: A new Flutter project.
+description: Mini games for party.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_dotenv: ^5.0.2
   noise_meter: ^3.1.0
+  qr_flutter: ^4.0.0
+  qr_code_scanner: 1.0.0
+  indexed: ^0.0.8
 
 dev_dependencies:
   flutter_test:
